--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ nav ul {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 nav img {
@@ -145,6 +146,9 @@ nav img {
 }
 
 /* Specials */
+.specials{
+  margin: 10% 0;
+}
 .specials-top {
   display: flex;
   justify-content: space-between;
