--- a/src/App.css
+++ b/src/App.css
@@ -263,3 +263,27 @@ option {
   margin-top: 20px;
   width: 50%;
 }
+
+/* Confirm Booking Page */
+
+.confirm{
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.confirmPage{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(50px, auto);
+  height: 100%;
+  background-color: antiquewhite;
+  padding: 2%;
+  width: 50%;
+  border: 2px solid black;
+  border-radius: 20px;
+
+}
